# rivero_flavia_garcia_carlos_examenCPP

./: CMakeLists.txt  README.md  asistencia.cpp  estudiantes.cpp  utils.cpp
c/: Estudiantes.c  Estudiantes.h  asistencia.c  asistencia.h  excepciones.c  excepciones.h  main.c  utils.c  utils.h
cpp/: asistencia.cpp  asistencia.h  estudiantes.h  excepciones.cpp  excepciones.h  main.cpp  utils.h
