cmake_minimum_required(VERSION 3.10)

project(rivero_flavia_garcia_carlos_examenCPP)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)


add_executable(rivero_flavia_garcia_carlos_examenCPP
        main.cpp
        asistencia.cpp
        estudiantes.cpp
        excepciones.cpp
        utils.cpp
        estudiantes.h

)
